syntax = "proto3";
package events;
option csharp_namespace = "Application.Protos.Events";

import "elements/element.proto";

message ElementAddedToPageEvent {
	string page_id = 1;
	elements.Element element = 2;
}